--- a/interests.html
+++ b/interests.html
@@ -23,7 +23,7 @@
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Deanna Carina Wigley</h1>
-                        <h2 class="title">Full-Stack Software Developer</h2>
+                        <h2 class="title">General IT nerd, searching for a new adventure</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -141,7 +141,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Aspiring full-stack software developer. Experience in HTML, CSS (and Bootstrap), JavaScript, Python (Flask & Django), GitHub, Heroku, PostgreSQL, MongoDB, communication, teamworking, collaboration.<br><br><br>    
+                    Aspiring full-stack junior/apprentice software developer. Experience in HTML, CSS (and Bootstrap), JavaScript, Python (Flask & Django), GitHub, Heroku, PostgreSQL, MongoDB, communication, teamworking, collaboration.<br><br><br>    
                 </p>
             </div>
             <div class="col-sm-4">
