--- a/thanks.html
+++ b/thanks.html
@@ -61,7 +61,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Aspiring full-stack software developer. Experience in HTML, CSS, JavaScript, Python, GitHub, Heroku, 
+                    Experience in HTML, CSS, JavaScript, Python, GitHub, Heroku, 
                     Bootstrap, communication, teamworking, collaboration.<br><br><br>    
                 </p>
             </div>
