--- a/interests.html
+++ b/interests.html
@@ -141,7 +141,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Aspiring full-stack junior/apprentice software developer. Experience in HTML, CSS (and Bootstrap), JavaScript, Python (Flask & Django), GitHub, Heroku, PostgreSQL, MongoDB, communication, teamworking, collaboration.<br><br><br>    
+                    Experience in HTML, CSS (and Bootstrap), JavaScript, Python (Flask & Django), GitHub, Heroku, PostgreSQL, MongoDB, communication, teamworking, collaboration.<br><br><br>    
                 </p>
             </div>
             <div class="col-sm-4">
