--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I am an aspiring full-stack software developer currently studying with Code Institute.                                 
+                                    I create small personalised projects from the ground up. After a 13 year career in healthcare, I'm looking to make the leap into the IT industry.                                 
                                 </p>
                             </div>
                         </div>
