Update resume progress bars

--- a/resume.html
+++ b/resume.html
@@ -145,8 +145,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I am currently working through a Software Development Diploma accredited by Edinburgh University and
-                                    achieving high grades in all back-end languages and frameworks.                                    
+                                    From my time on the Full-Stack software development course, I have had some experience with backend programming using SQL, AWS and Python.                                    
                                 </p>
                             </div>
                         </div>
@@ -251,6 +250,24 @@
                                 <span class="sr-only">5% Complete</span>
                             </div>
                             <span class="progress-type">MongoDB</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                                <span class="sr-only">5% Complete</span>
+                            </div>
+                            <span class="progress-type">PHP</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                                <span class="sr-only">5% Complete</span>
+                            </div>
+                            <span class="progress-type">C#</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:5%">
+                                <span class="sr-only">5% Complete</span>
+                            </div>
+                            <span class="progress-type">.NET</span>
                         </div>
                         
                     </div>
