--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 <h5 class="uppercase text-center">Please use the form below.</h5>
 
                 <div class="center-form">
-                    <form id="fillForm" class="contact-form" onsubmit="return sendMail(this);" method="POST">
+                    <form id="fillForm" class="contact-form">
                         <input type="text" name="name" id="name" class="form-control" placeholder="Name" required/>
                         <input type="text" name="email" id="email" class="form-control" placeholder="Email Address" required/>
                         <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required/>
