Fix of 405 error contact form

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         <textarea rows="10" name="message" id="message" class="form-control" placeholder="Your message" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <a href="#"><button type="submit" class="btn btn-secondary" id="contact-button">Send <i class="fas fa-paper-plane"></i></button></a>
+                                <a href="#"><button type="submit" value="send" class="btn btn-secondary" id="contact-button">Send <i class="fas fa-paper-plane"></i></button></a>
                             </div>
                         </div>
                     </form>
