Fix typo in education

--- a/resume.html
+++ b/resume.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="timeline-item" data-dates="09/2008 - 08/2010">
                         <h4>Greenbank High School, Southport</h4>
-                        <p>GCSEs: Eglish(B), English Literature(B), Science(B), Mathematics(B)</p>
+                        <p>GCSEs: English(B), English Literature(B), Science(B), Mathematics(B)</p>
                         <p>Design&Technology(A), Fine Art(B), Business Studies(C), French(C)</p>
                     </div>
                 </div>    
