--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Deanna Carina Wigley</h1>
-                        <h2 class="title">General IT nerd, searching for a new adventure</h2>
+                        <h2 class="title">Front-end Software Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -34,9 +34,7 @@
                             <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom">
                                 <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resumé</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-interests menu-item hvr-sweep-to-bottom active">
-                                <a href="interests.html"><i class="fas fa-users" aria-hidden="true"></i><span>Interests</span></a>
-                            </li>
+                    
                             <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom active">
                                 <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
@@ -45,6 +43,9 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
                                 <a href="assets/cv/CV.pdf" target="_blank"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-linkedin menu-item hvr-sweep-to-bottom">
+                                <a href="https://www.linkedin.com/in/deannacarina/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
                             </li>
                         </ul>
                     </div>
@@ -124,7 +125,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I create small personalised projects from the ground up. After a 13 year career in healthcare, I'm looking to make the leap into the IT industry.                                 
+                                    I create and maintain web applications using HTML, CSS and JavaScript. I collaborate on bigger projects and use languages such as Python and PHP for bach-end maintenance and creation of new project functionality.
                                 </p>
                             </div>
                         </div>
@@ -138,7 +139,9 @@
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
                                     I follow form as well as function. I know that the aesthetics of effective design combined 
-                                    with application speed, security and reliability combine to create a great user experience.                                     
+                                    with application speed, security and reliability combine to create a great user experience. 
+                                    I have a keen interest in application accessibility ensuring a smooth experience for users 
+                                    with specialised needs.                                     
                                 </p>
                             </div>
                         </div>
@@ -153,7 +156,8 @@
                                 <p>
                                     I work quickly and effectively in getting things built and working 
                                     across the stack. I'm an excellent communicator who thrives in bright 
-                                    and enthusiastic teams and I'm also a self starter when working solo.                                    
+                                    and enthusiastic teams and I'm also a self starter when working solo.      
+                                                            
                                 </p>
                             </div>
                         </div>
