--- a/thanks.html
+++ b/thanks.html
@@ -22,7 +22,7 @@
                 <div class="row bg-color-name-title no-gutters">
                     <div class="col heading">
                         <h1 class="name">Deanna Carina Wigley</h1>
-                        <h2 class="title">General IT nerd, searching for a new adventure</h2>
+                        <h2 class="title">Front-end Software Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -34,9 +34,7 @@
                             <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-resume menu-item hvr-sweep-to-bottom">
                                 <a href="resume.html"><i class="fas fa-graduation-cap" aria-hidden="true"></i><span>Resumé</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-interests menu-item hvr-sweep-to-bottom active">
-                                <a href="interests.html"><i class="fas fa-users" aria-hidden="true"></i><span>Interests</span></a>
-                            </li>
+ 
                             <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-contact menu-item hvr-sweep-to-bottom active">
                                 <a href="contact.html"><i class="fas fa-comment" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
@@ -45,6 +43,9 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-cv menu-item hvr-sweep-to-bottom">
                                 <a href="assets/cv/CV.pdf" target="_blank"><i class="fas fa-download" aria-hidden="true"></i><span>CV Download</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 list-inline-item ui-menu-color-linkedin menu-item hvr-sweep-to-bottom">
+                                <a href="https://www.linkedin.com/in/deannacarina/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
                             </li>
                         </ul>
                     </div>
